--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
   <div id="mainPage" style="display:none;">
     <audio autoplay loop>
-      <source src="romantic-song.mp3" type="audio/mpeg">
+      <source src="song.mp3" type="audio/mpeg">
     </audio>
 
     <div class="chapter" id="chapter1">
