--- a/index.html
+++ b/index.html
@@ -14,9 +14,10 @@
   </div>
 
   <div id="mainPage" style="display:none;">
-    <audio autoplay loop>
-      <source src="song.mp3" type="audio/mpeg">
-    </audio>
+   <audio id="bgMusic" autoplay muted loop>
+  <source src="song.mp3" type="audio/mpeg">
+</audio>
+
 
     <div class="chapter" id="chapter1">
       <h1>📖 Chapter 1: When We First Met</h1>
