--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <div id="unlockPage" class="unlock">
     <h2>💌 A Secret Page Just for You</h2>
     <p>Enter the magic word to begin our story...</p>
-    <input type="password" id="unlockPassword" placeholder="Your Secret Code">
+    <input type="password" id="unlockPassword" placeholder="Enter my date of birth">
     <button onclick="unlock()">Unlock</button>
   </div>
 
