--- a/index.html
+++ b/index.html
@@ -14,14 +14,20 @@
   </div>
 
   <div id="mainPage" style="display:none;">
-   <audio id="bgMusic" autoplay muted loop>
-  <source src="song.mp3" type="audio/mpeg">
-</audio>
-
+    <audio id="bgMusic" autoplay muted loop>
+      <source src="song.mp3" type="audio/mpeg">
+    </audio>
 
     <div class="chapter" id="chapter1">
       <h1>📖 Chapter 1: When We First Met</h1>
-      <p class="typewriter">"I still remember that day…<br> You and your friends were seated on the stone bench and called us over as part of a light ragging. <br>One of the boys asked me to step forward, gently asked my name and a few details.<br> Then came the teasing — your friends smiled and said,<br> ‘Ponnan avale angane ishtayadekkanu alle...’<br> That playful moment, filled with laughter and glances,<br> unknowingly marked the beginning of our beautiful journey."</p>
+      <p class="typewriter">"I still remember that day…<br>
+        You and your friends were seated on the stone bench and called us over as part of a light ragging.<br>
+        One of the boys asked me to step forward, gently asked my name and a few details.<br>
+        Then came the teasing — your friends smiled and said,<br>
+        ‘Ponnan avale angane ishtayadekkanu alle...’<br>
+        That playful moment, filled with laughter and glances,<br>
+        unknowingly marked the beginning of our beautiful journey."
+      </p>
     </div>
 
     <div class="chapter" id="chapter2">
@@ -35,9 +41,14 @@
 
     <div class="chapter" id="chapter3">
       <h1>🌹 Chapter 3: Today, 3 Years Later</h1>
-      <p class="typewriter">Three years of laughter, adventures, tears, and endless love.<br>After all the fights and ignoring each other, we always end up with so much love again.<br> So many adis happened just because of that third person 😂.<br> Still, we’re the happiest in our little world.<br> If anyone else tries to come in, it’s definitely going to be a disaster 😅.<br>
-Thank you for always being on my side, POTTA🫣❤️.<br>
-And hmm… thaaneey ee peningalod velland konjan nikkanath ikk ishtallatahhh da pottahh.</p>
+      <p class="typewriter">Three years of laughter, adventures, tears, and endless love.<br>
+        After all the fights and ignoring each other, we always end up with so much love again.<br>
+        So many adis happened just because of that third person 😂.<br>
+        Still, we’re the happiest in our little world.<br>
+        If anyone else tries to come in, it’s definitely going to be a disaster 😅.<br>
+        Thank you for always being on my side, POTTA🫣❤️.<br>
+        And hmm… thaaneey ee peningalod velland konjan nikkanath ikk ishtallatahhh da pottahh.
+      </p>
     </div>
 
     <div class="chapter" id="gift">
@@ -49,6 +60,22 @@ And hmm… thaaneey ee peningalod velland konjan nikkanath ikk ishtallatahhh da 
     </div>
   </div>
 
-  <script src="script.js"></script>
+  <script>
+    function unlock() {
+      const password = document.getElementById("unlockPassword").value;
+      if (password === "foreverus") { // 🔐 Change this password to whatever you want
+        document.getElementById("unlockPage").style.display = "none";
+        document.getElementById("mainPage").style.display = "block";
+
+        const music = document.getElementById("bgMusic");
+        music.muted = false;
+        music.play().catch((e) => {
+          console.log("Autoplay blocked. Interaction needed.", e);
+        });
+      } else {
+        alert("Oops! Try again 💌");
+      }
+    }
+  </script>
 </body>
 </html>
