--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <<script src="script.js"
   <div id="unlockPage" class="unlock">
     <h2>💌 A Secret Page Just for You</h2>
     <p>Enter the magic word to begin our story...</p>
@@ -60,22 +61,7 @@
     </div>
   </div>
 
-  <script>
-    function unlock() {
-      const password = document.getElementById("unlockPassword").value;
-      if (password === "foreverus") { // 🔐 Change this password to whatever you want
-        document.getElementById("unlockPage").style.display = "none";
-        document.getElementById("mainPage").style.display = "block";
-
-        const music = document.getElementById("bgMusic");
-        music.muted = false;
-        music.play().catch((e) => {
-          console.log("Autoplay blocked. Interaction needed.", e);
-        });
-      } else {
-        alert("Oops! Try again 💌");
-      }
-    }
+ 
   </script>
 </body>
 </html>
