--- a/index.html
+++ b/index.html
@@ -56,7 +56,8 @@
       <h1>🎁 Final Chapter: Your Surprise</h1>
       <div class="gift-box">
         <p>Click to open your final surprise</p>
-        <a href="surprise.html" class="open-btn">💝 Open Gift 💝</a>
+        <a href="#" onclick="loadSurprise()" class="open-btn">💝 Open Gift 💝</a>
+
       </div>
     </div>
   </div>
