--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
+<script src="script.js">
   <!-- 🔒 Unlock Page -->
   <div id="unlockPage" class="unlock">
     <h2>💌 A Secret Page Just for You</h2>
@@ -72,6 +72,6 @@
     </div>
   </div>
 
-  <script src="script.js"></script>
+  </script>
 </body>
 </html>
