--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
   <!-- 🔒 Unlock Page -->
   <div id="unlockPage" class="unlock">
     <h2>💌 A Secret Page Just for You</h2>
@@ -17,15 +16,14 @@
 
   <!-- 🎉 Main Content -->
   <div id="mainPage" style="display: none;">
-    
     <!-- Background Music -->
-    <audio id="bgMusic" autoplay muted loop>
+    <audio id="bgMusic" autoplay loop muted>
       <source src="song.mp3" type="audio/mpeg">
       Your browser does not support the audio element.
     </audio>
 
     <!-- Chapter 1 -->
-    <div class="chapter" id="chapter1">
+    <div class="chapter">
       <h1>📖 Chapter 1: When We First Met</h1>
       <p class="typewriter">
         "I still remember that day…<br>
@@ -33,13 +31,12 @@
         One of the boys asked me to step forward, gently asked my name and a few details.<br>
         Then came the teasing — your friends smiled and said,<br>
         ‘Ponnan avale angane ishtayadekkanu alle...’<br>
-        That playful moment, filled with laughter and glances,<br>
-        unknowingly marked the beginning of our beautiful journey."
+        That playful moment marked the beginning of our beautiful journey."
       </p>
     </div>
 
     <!-- Chapter 2 -->
-    <div class="chapter" id="chapter2">
+    <div class="chapter">
       <h1>💖 Chapter 2: Us, Through the Seasons</h1>
       <div class="carousel">
         <img src="im4.jpg" alt="Memory 1">
@@ -49,16 +46,13 @@
     </div>
 
     <!-- Chapter 3 -->
-    <div class="chapter" id="chapter3">
+    <div class="chapter">
       <h1>🌹 Chapter 3: Today, 3 Years Later</h1>
       <p class="typewriter">
-        Three years of laughter, adventures, tears, and endless love.<br>
-        After all the fights and ignoring each other, we always end up with so much love again.<br>
-        So many adis happened just because of that third person 😂.<br>
-        Still, we’re the happiest in our little world.<br>
-        If anyone else tries to come in, it’s definitely going to be a disaster 😅.<br>
+        Three years of laughter, adventures, and endless love.<br>
+        Even after all the fights, we always end up back in each other's arms.<br>
         Thank you for always being on my side, POTTA🫣❤️.<br>
-        And hmm… thaaneey ee peningalod velland konjan nikkanath ikk ishtallatahhh da pottahh.
+        Thaaneey ee peningalod velland konjan nikkanath ikk ishtallatahhh da pottahh.
       </p>
     </div>
 
@@ -72,6 +66,6 @@
     </div>
   </div>
 
- <script src="script.js"> </script>
+  <script src="script.js"></script>
 </body>
 </html>
