--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
   <!-- 🔒 Unlock Page -->
   <div id="unlockPage" class="unlock">
     <h2>💌 A Secret Page Just for You</h2>
@@ -14,16 +15,17 @@
     <button onclick="unlock()">Unlock</button>
   </div>
 
-  <!-- 🎉 Main Content -->
+  <!-- 🎉 Main Page -->
   <div id="mainPage" style="display: none;">
-    <!-- Background Music -->
-    <audio id="bgMusic" autoplay loop muted>
+    
+    <!-- 🎵 Background Music -->
+    <audio id="bgMusic" autoplay muted loop>
       <source src="song.mp3" type="audio/mpeg">
       Your browser does not support the audio element.
     </audio>
 
     <!-- Chapter 1 -->
-    <div class="chapter">
+    <div class="chapter" id="chapter1">
       <h1>📖 Chapter 1: When We First Met</h1>
       <p class="typewriter">
         "I still remember that day…<br>
@@ -31,12 +33,13 @@
         One of the boys asked me to step forward, gently asked my name and a few details.<br>
         Then came the teasing — your friends smiled and said,<br>
         ‘Ponnan avale angane ishtayadekkanu alle...’<br>
-        That playful moment marked the beginning of our beautiful journey."
+        That playful moment, filled with laughter and glances,<br>
+        unknowingly marked the beginning of our beautiful journey."
       </p>
     </div>
 
     <!-- Chapter 2 -->
-    <div class="chapter">
+    <div class="chapter" id="chapter2">
       <h1>💖 Chapter 2: Us, Through the Seasons</h1>
       <div class="carousel">
         <img src="im4.jpg" alt="Memory 1">
@@ -46,13 +49,16 @@
     </div>
 
     <!-- Chapter 3 -->
-    <div class="chapter">
+    <div class="chapter" id="chapter3">
       <h1>🌹 Chapter 3: Today, 3 Years Later</h1>
       <p class="typewriter">
-        Three years of laughter, adventures, and endless love.<br>
-        Even after all the fights, we always end up back in each other's arms.<br>
+        Three years of laughter, adventures, tears, and endless love.<br>
+        After all the fights and ignoring each other, we always end up with so much love again.<br>
+        So many adis happened just because of that third person 😂.<br>
+        Still, we’re the happiest in our little world.<br>
+        If anyone else tries to come in, it’s definitely going to be a disaster 😅.<br>
         Thank you for always being on my side, POTTA🫣❤️.<br>
-        Thaaneey ee peningalod velland konjan nikkanath ikk ishtallatahhh da pottahh.
+        And hmm… thaaneey ee peningalod velland konjan nikkanath ikk ishtallatahhh da pottahh.
       </p>
     </div>
 
@@ -64,8 +70,10 @@
         <a href="surprise.html" class="open-btn">💝 Open Gift 💝</a>
       </div>
     </div>
+
   </div>
 
+  <!-- 🌟 Scripts -->
   <script src="script.js"></script>
 </body>
 </html>
