--- a/index.html
+++ b/index.html
@@ -25,21 +25,16 @@
     </audio>
 
     <!-- Chapter 1 -->
-    <div class="chapter" id="chapter1">
+    <div class="chapter">
       <h1>📖 Chapter 1: When We First Met</h1>
       <p class="typewriter">
-        "I still remember that day…<br>
-        You and your friends were seated on the stone bench and called us over as part of a light ragging.<br>
-        One of the boys asked me to step forward, gently asked my name and a few details.<br>
-        Then came the teasing — your friends smiled and said,<br>
-        ‘Ponnan avale angane ishtayadekkanu alle...’<br>
-        That playful moment, filled with laughter and glances,<br>
-        unknowingly marked the beginning of our beautiful journey."
+        I still remember that day… You and your friends were seated on the stone bench...<br>
+        That playful moment unknowingly marked the beginning of our beautiful journey.
       </p>
     </div>
 
     <!-- Chapter 2 -->
-    <div class="chapter" id="chapter2">
+    <div class="chapter">
       <h1>💖 Chapter 2: Us, Through the Seasons</h1>
       <div class="carousel">
         <img src="im4.jpg" alt="Memory 1">
@@ -49,31 +44,41 @@
     </div>
 
     <!-- Chapter 3 -->
-    <div class="chapter" id="chapter3">
+    <div class="chapter">
       <h1>🌹 Chapter 3: Today, 3 Years Later</h1>
       <p class="typewriter">
-        Three years of laughter, adventures, tears, and endless love.<br>
-        After all the fights and ignoring each other, we always end up with so much love again.<br>
-        So many adis happened just because of that third person 😂.<br>
-        Still, we’re the happiest in our little world.<br>
-        If anyone else tries to come in, it’s definitely going to be a disaster 😅.<br>
-        Thank you for always being on my side, POTTA🫣❤️.<br>
-        And hmm… thaaneey ee peningalod velland konjan nikkanath ikk ishtallatahhh da pottahh.
+        After all the fights and ignoring each other, we always end up with so much love again...<br>
+        Thank you for always being on my side, POTTA🫣❤️.
       </p>
     </div>
 
     <!-- Final Chapter -->
-    <div class="chapter" id="gift">
+    <div class="chapter">
       <h1>🎁 Final Chapter: Your Surprise</h1>
       <div class="gift-box">
         <p>Click to open your final surprise</p>
-        <a href="surprise.html" class="open-btn">💝 Open Gift 💝</a>
+        <button class="open-btn" onclick="openSurprise()">💝 Open Gift 💝</button>
       </div>
     </div>
-
   </div>
 
-  <!-- 🌟 Scripts -->
+  <!-- 🎉 Surprise Modal -->
+  <div id="surpriseModal" class="modal">
+    <div class="modal-content">
+      <span class="close" onclick="closeSurprise()">&times;</span>
+      <h2>🎉 Surprise Message</h2>
+      <p>
+        Hey pottahhh!<br>
+        I just want you to know how special you are to me. 3 years together and every moment has been nothing short of magic ✨.<br>
+        You make my world brighter, my heart fuller, and my life a whole lot better.<br><br>
+        I LOVE YOU SO MUCH! 💖<br>
+        Forever yours,<br>
+        🐒💌🐷
+      </p>
+      <img src="im5.jpg" alt="Surprise Image" class="modal-img">
+    </div>
+  </div>
+
   <script src="script.js"></script>
 </body>
 </html>
