--- a/index.html
+++ b/index.html
@@ -61,8 +61,25 @@
       <h1>🎁 Final Chapter: Your Surprise</h1>
       <div class="gift-box">
         <p>Click to open your final surprise</p>
-        <a href="surprise.html" class="open-btn">💝 Open Gift 💝</a>
+        <button class="open-btn" onclick="openSurprise()">💝 Open Gift 💝</button>
       </div>
+    </div>
+  </div>
+
+  <!-- 🎁 Surprise Modal -->
+  <div id="surpriseModal" class="modal">
+    <div class="modal-content">
+      <span class="close" onclick="closeSurprise()">&times;</span>
+      <h2>🎉 Surprise Message</h2>
+      <p>
+        Hey pottahhh!<br><br>
+        I just want you to know how special you are to me. 3 years together and every moment has been nothing short of magic ✨.<br>
+        You make my world brighter, my heart fuller, and my life a whole lot better.<br><br>
+        I LOVE YOU SO MUCH! 💖<br>
+        Forever yours,<br>
+        🐒💌🐷
+      </p>
+      <img src="im5.jpg" alt="Us" class="modal-img">
     </div>
   </div>
 
