--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <!-- 🎉 Main Content -->
   <div id="mainPage" style="display: none;">
     <!-- Background Music -->
-    <audio id="bgMusic" autoplay loop muted>
+    <audio id="bgMusic" autoplay loop>
       <source src="song.mp3" type="audio/mpeg">
       Your browser does not support the audio element.
     </audio>
@@ -39,9 +39,9 @@
     <div class="chapter">
       <h1>💖 Chapter 2: Us, Through the Seasons</h1>
       <div class="carousel">
-        <img src="im4.jpg" alt="Memory 1">
-        <img src="im3.jpg" alt="Memory 2">
-        <img src="im1.jpg" alt="Memory 3">
+        <img src="im1.jpg" alt="Memory 1">
+        <img src="im2.jpg" alt="Memory 2">
+        <img src="im3.jpg" alt="Memory 3">
       </div>
     </div>
 
@@ -61,25 +61,8 @@
       <h1>🎁 Final Chapter: Your Surprise</h1>
       <div class="gift-box">
         <p>Click to open your final surprise</p>
-        <button class="open-btn" onclick="openSurprise()">💝 Open Gift 💝</button>
+        <a href="surprise.html" class="open-btn">💝 Open Gift 💝</a>
       </div>
-    </div>
-  </div>
-
-  <!-- 🎁 Surprise Modal -->
-  <div id="surpriseModal" class="modal">
-    <div class="modal-content">
-      <span class="close" onclick="closeSurprise()">&times;</span>
-      <h2>🎉 Surprise Message</h2>
-      <p>
-        Hey pottahhh!<br><br>
-        I just want you to know how special you are to me. 3 years together and every moment has been nothing short of magic ✨.<br>
-        You make my world brighter, my heart fuller, and my life a whole lot better.<br><br>
-        I LOVE YOU SO MUCH! 💖<br>
-        Forever yours,<br>
-        🐒💌🐷
-      </p>
-      <img src="im5.jpg" alt="Us" class="modal-img">
     </div>
   </div>
 
