--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
   </div>
 
   <!-- 🎉 Main Content -->
-  <div id="mainPage" style="display: none;">
-    <!-- Background Music -->
-    <audio id="bgMusic" autoplay loop>
-      <source src="song.mp3" type="audio/mpeg">
-      Your browser does not support the audio element.
-    </audio>
+  <!-- Background Music -->
+<audio id="bgMusic" autoplay loop muted>
+  <source src="song.mp3" type="audio/mpeg">
+  Your browser does not support the audio element.
+</audio>
+
 
     <!-- Chapter 1 -->
     <div class="chapter">
