--- a/index.html
+++ b/index.html
@@ -61,7 +61,8 @@
       <h1>🎁 Final Chapter: Your Surprise</h1>
       <div class="gift-box">
         <p>Click to open your final surprise</p>
-        <a href="surprise.html" class="open-btn">💝 Open Gift 💝</a>
+        <a href="#" class="open-btn" onclick="window.open('surprise.html', 'Surprise', 'width=600,height=600'); return false;">💝 Open Gift 💝</a>
+
       </div>
     </div>
   </div>
