--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!-- index.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -7,7 +6,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <!-- 🔒 Unlock Page -->
+  <!-- 🔐 Unlock Page -->
   <div id="unlockPage" class="unlock">
     <h2>💌 A Secret Page Just for You</h2>
     <p>Enter the magic word to begin our story...</p>
@@ -15,49 +14,48 @@
     <button onclick="unlock()">Unlock</button>
   </div>
 
-  <!-- 🎉 Main Content -->
-  <div id="mainPage">
+  <!-- 🎉 Main Content (Initially Hidden) -->
+  <div id="mainPage" style="display: none;">
+    <!-- 🎵 Background Music -->
     <audio id="bgMusic" autoplay loop muted>
       <source src="song.mp3" type="audio/mpeg">
       Your browser does not support the audio element.
     </audio>
 
+    <!-- ❤️ Chapter 1 -->
     <div class="chapter">
       <h1>📖 Chapter 1: When We First Met</h1>
       <p class="typewriter">
-        "I still remember that day…<br>
-        You and your friends were seated on the stone bench and called us over as part of a light ragging.<br>
-        One of the boys asked me to step forward, gently asked my name and a few details.<br>
-        Then came the teasing — your friends smiled and said,<br>
-        ‘Ponnan avale angane ishtayadekkanu alle...’<br>
-        That playful moment marked the beginning of our beautiful journey."
+        I still remember that day… You and your friends were seated on the stone bench...<br>
+        That playful moment marked the beginning of our beautiful journey.
       </p>
     </div>
 
+    <!-- 📸 Chapter 2 -->
     <div class="chapter">
       <h1>💖 Chapter 2: Us, Through the Seasons</h1>
       <div class="carousel">
-        <img src="im4.jpg" alt="Memory 1">
-        <img src="im3.jpg" alt="Memory 2">
-        <img src="im1.jpg" alt="Memory 3">
+        <img src="im1.jpg" alt="Memory 1">
+        <img src="im2.jpg" alt="Memory 2">
+        <img src="im3.jpg" alt="Memory 3">
       </div>
     </div>
 
+    <!-- 🥹 Chapter 3 -->
     <div class="chapter">
       <h1>🌹 Chapter 3: Today, 3 Years Later</h1>
       <p class="typewriter">
         Three years of laughter, adventures, and endless love.<br>
-        Even after all the fights, we always end up back in each other's arms.<br>
-        Thank you for always being on my side, POTTA🫣❤️.<br>
-        Thaaneey ee peningalod velland konjan nikkanath ikk ishtallatahhh da pottahh.
+        Thank you for always being on my side, POTTA🫣❤️.
       </p>
     </div>
 
+    <!-- 🎁 Final Chapter -->
     <div class="chapter" id="gift">
       <h1>🎁 Final Chapter: Your Surprise</h1>
       <div class="gift-box">
         <p>Click to open your final surprise</p>
-        <button onclick="showSurprise()" class="open-btn">💝 Open Gift 💝</button>
+        <button class="open-btn" onclick="showSurprise()">💝 Open Gift 💝</button>
       </div>
     </div>
   </div>
