--- a/index.html
+++ b/index.html
@@ -6,15 +6,18 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <!-- 🔐 Unlock Page -->
+
+  <!-- 🔒 Unlock Page -->
   <div id="unlockPage" class="unlock">
-    <h2>💌 A Secret Page Just for You</h2>
+    <h2>💗 A Secret Page Just for You</h2>
     <p>Enter the magic word to begin our story...</p>
-    <input type="password" id="unlockPassword" placeholder="Enter her date of birth">
-    <button onclick="unlock()">Unlock</button>
+    <div>
+      <input type="password" id="unlockPassword" placeholder="Enter her date of birth">
+      <button onclick="unlock()">Unlock</button>
+    </div>
   </div>
 
-  <!-- 🎉 Main Content (Initially Hidden) -->
+  <!-- 🎉 Main Content -->
   <div id="mainPage" style="display: none;">
     <!-- 🎵 Background Music -->
     <audio id="bgMusic" autoplay loop muted>
@@ -22,41 +25,56 @@
       Your browser does not support the audio element.
     </audio>
 
-    <!-- ❤️ Chapter 1 -->
-    <div class="chapter">
+    <!-- Chapter 1 -->
+    <section>
       <h1>📖 Chapter 1: When We First Met</h1>
       <p class="typewriter">
-        I still remember that day… You and your friends were seated on the stone bench...<br>
-        That playful moment marked the beginning of our beautiful journey.
+        "I still remember that day…<br>
+        You and your friends were seated on the stone bench and called us over as part of a light ragging.<br>
+        One of the boys asked me to step forward, gently asked my name and a few details.<br>
+        Then came the teasing — your friends smiled and said,<br>
+        ‘Ponnan avale angane ishtayadekkanu alle...’<br>
+        That playful moment marked the beginning of our beautiful journey."
       </p>
-    </div>
+    </section>
 
-    <!-- 📸 Chapter 2 -->
-    <div class="chapter">
+    <!-- Chapter 2 -->
+    <section>
       <h1>💖 Chapter 2: Us, Through the Seasons</h1>
       <div class="carousel">
-        <img src="im1.jpg" alt="Memory 1">
-        <img src="im2.jpg" alt="Memory 2">
-        <img src="im3.jpg" alt="Memory 3">
+        <img src="im4.jpg" alt="Memory 1">
+        <img src="im3.jpg" alt="Memory 2">
+        <img src="im1.jpg" alt="Memory 3">
       </div>
-    </div>
+    </section>
 
-    <!-- 🥹 Chapter 3 -->
-    <div class="chapter">
+    <!-- Chapter 3 -->
+    <section>
       <h1>🌹 Chapter 3: Today, 3 Years Later</h1>
       <p class="typewriter">
         Three years of laughter, adventures, and endless love.<br>
-        Thank you for always being on my side, POTTA🫣❤️.
+        Even after all the fights, we always end up back in each other's arms.<br>
+        Thank you for always being on my side, POTTA🫣❤️.<br>
+        Thaaneey ee peningalod velland konjan nikkanath ikk ishtallatahhh da pottahh.
       </p>
-    </div>
+    </section>
 
-    <!-- 🎁 Final Chapter -->
-    <div class="chapter" id="gift">
+    <!-- Final Surprise -->
+    <section>
       <h1>🎁 Final Chapter: Your Surprise</h1>
       <div class="gift-box">
         <p>Click to open your final surprise</p>
-        <button class="open-btn" onclick="showSurprise()">💝 Open Gift 💝</button>
+        <a href="#" class="open-btn" onclick="showSurprise()">💝 Open Gift 💝</a>
       </div>
+    </section>
+  </div>
+
+  <!-- 💝 Popup Surprise -->
+  <div id="popupSurprise" style="display: none;">
+    <div style="background: white; padding: 20px; border-radius: 15px; max-width: 400px; margin: 100px auto; box-shadow: 0 4px 10px rgba(0,0,0,0.3);">
+      <h2>💌 Surprise Message</h2>
+      <p>You are my everything. Happy 3rd Anniversary my love! 💕</p>
+      <button onclick="closeSurprise()" style="margin-top: 10px; padding: 8px 16px; background: #ff69b4; color: white; border: none; border-radius: 8px;">Close</button>
     </div>
   </div>
 
