--- a/index.html
+++ b/index.html
@@ -72,8 +72,9 @@
   <!-- 💝 Popup Surprise -->
   <div id="popupSurprise" style="display: none;">
     <div style="background: white; padding: 20px; border-radius: 15px; max-width: 400px; margin: 100px auto; box-shadow: 0 4px 10px rgba(0,0,0,0.3);">
-      <h2>💌 Surprise Message</h2>
-      <p>You are my everything. Happy 3rd Anniversary my love! 💕</p>
+      <h2>💌 Surprise Message 💌</h2>
+      <p> Happy 3rd Anniversary my dear pottahh! 💕
+A gift is comming soon...wait nd make a chance to meet me.when we meet I'll give it to youh!!</p>
       <button onclick="closeSurprise()" style="margin-top: 10px; padding: 8px 16px; background: #ff69b4; color: white; border: none; border-radius: 8px;">Close</button>
     </div>
   </div>
