--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
   <!-- 🔒 Unlock Page -->
   <div id="unlockPage" class="unlock">
-    <h2>💗 A Secret Page Just for You</h2>
+    <h2>💗 A Secret Page Just for US 💗</h2>
     <p>Enter the magic word to begin our story...</p>
     <div>
       <input type="password" id="unlockPassword" placeholder="Enter her date of birth">
@@ -33,7 +33,7 @@
         You and your friends were seated on the stone bench and called us over as part of a light ragging.<br>
         One of the boys asked me to step forward, gently asked my name and a few details.<br>
         Then came the teasing — your friends smiled and said,<br>
-        ‘Ponnan avale angane ishtayadekkanu alle...’<br>
+        ‘ പൊന്നന് അവളെ അങ്ങട് ഇഷ്ട്ടായടക്കണു...’<br>
         That playful moment marked the beginning of our beautiful journey."
       </p>
     </section>
@@ -42,9 +42,9 @@
     <section>
       <h1>💖 Chapter 2: Us, Through the Seasons</h1>
       <div class="carousel">
-        <img src="im4.jpg" alt="Memory 1">
-        <img src="im3.jpg" alt="Memory 2">
-        <img src="im1.jpg" alt="Memory 3">
+        <img src="im4.jpg" alt="1st birthday surprise for you from me 😌">
+        <img src="im3.jpg" alt="Ee photo ara esthe nn ormandaa😅">
+        <img src="im1.jpg" alt="You are soo cute in this pottah🥹❤️">
       </div>
     </section>
 
@@ -54,7 +54,7 @@
       <p class="typewriter">
         Three years of laughter, adventures, and endless love.<br>
         Even after all the fights, we always end up back in each other's arms.<br>
-        Thank you for always being on my side, POTTA🫣❤️.<br>
+          POTTA🫣❤️.<br>
         Thaaneey ee peningalod velland konjan nikkanath ikk ishtallatahhh da pottahh.
       </p>
     </section>
