--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
       <p class="typewriter">
         Three years of laughter, adventures, and endless love.<br>
         Even after all the fights, we always end up back in each other's arms.<br>
-          POTTA🫣❤️.<br>
-        Thaaneey ee peningalod velland konjan nikkanath ikk ishtallatahhh da pottahh.
+          <br>
+        🫨Thaaneey ee peningalod velland konjan nikkanath ikk ishtallatahhh da pottahh.😏
       </p>
     </section>
 
