--- a/index.html
+++ b/index.html
@@ -71,9 +71,9 @@
 
   <!-- 💝 Popup Surprise -->
   <div id="popupSurprise" style="display: none;">
-    <div style="background: white; padding: 25px; border-radius: 15px; max-width: 1500px; margin: 100px auto; box-shadow: 0 4px 10px rgba(0,0,0,0.3);">
+    <div style="background: white; padding: 25px; border-radius: 15px; max-width: 500px; margin: 100px auto; box-shadow: 0 4px 10px rgba(0,0,0,0.3);">
       <h2>💌 Surprise Message 💌</h2>
-      <p> Happy 3rd Anniversary my dear pottahh! 💕
+      <p> Happy 3rd Anniversary my dear pottahh! 💕<br>
 A gift is comming soon...wait nd make a chance to meet me.when we meet I'll give it to youh!!</p>
       <button onclick="closeSurprise()" style="margin-top: 10px; padding: 8px 16px; background: #ff69b4; color: white; border: none; border-radius: 8px;">Close</button>
     </div>
